--- a/jee.html
+++ b/jee.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <p>HELLO RAKYAT PRABOWO 😈😈😈😈😈😈</p>
+    <p>HELLO RAKYAT PRABOWO CUY 😈😈😈😈😈😈</p>
     <button>Button</button>
   </body>
 </html>
