--- a/jee.html
+++ b/jee.html
@@ -10,3 +10,8 @@
     <button>Button</button>
   </body>
 </html>
+
+<!-- git add (menambahkan file kita ke staging condition), git commit, git push -->
+<!-- [1] = modified, U = Updated => working directory, masih di local kita sendiri -->
+<!-- kalo git add ., berarti untuk push ke staging untuk semua file yang diubah, kalo gamau, pake git add (nama file) -->
+<!-- branching, conflict, pr besok -->
