checking all branch name

--- a/jee.html
+++ b/jee.html
@@ -25,3 +25,4 @@ https://github.com/jeeshakira/git-practice.git
 <!-- [1] = modified, U = Updated => working directory, masih di local kita sendiri -->
 <!-- kalo git add ., berarti untuk push ke staging untuk semua file yang diubah, kalo gamau, pake git add (nama file) -->
 <!-- branching, conflict, pr besok -->
+<!-- check push untuk lihat semua branch di kel 1 -->
