--- a/jee.html
+++ b/jee.html
@@ -27,4 +27,4 @@ https://github.com/jeeshakira/git-practice.git
 <!-- kalo git add ., berarti untuk push ke staging untuk semua file yang diubah, kalo gamau, pake git add (nama file) -->
 <!-- branching, conflict, pr besok -->
 
- 
+ sdflkjelksjlkjelksjflks
